2019-1/231/users/4235/executions/1651_2447.log
== TEST (2019-04-09 19:39:55) 
-- CODE:
p = float(input("preço: "))
pag = float(input("pagamento: "))
if (p > pag):
	msg = "Falta "+ p-pag
else :
	msg = "Troco de "+ pag-p
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    msg = "Falta "+ p-pag
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:40:29) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
if (p > pag):
	msg = "Falta "+ p-pag
else :
	msg = "Troco de "+ pag-p
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    msg = "Falta "+ p-pag
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:40:54) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
if (p > pag):
	msg = "Falta "+ p-pag
else :
	msg = "Troco de "+ (pag-p)
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    msg = "Falta "+ p-pag
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:41:31) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
if (p > pag):
	msg = "Falta "+ p-pag
else :
	msg = "Troco de "+ (p-pag)
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    msg = "Falta "+ p-pag
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:42:33) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
if (p > pag):
	msg = "Falta "+ pag-p
else :
	msg = "Troco de "+ pag-p
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    msg = "Falta "+ pag-p
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:42:57) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
if (p > pag):
	msg = "Falta "+ pag-p
else :
	msg = "Troco de "+ pag-p
print(float(msg)

-- EXECUTION TIME:
0.292233
-- ERROR:
  File "/home/codebench/codes/1651/2447/main.py", line 8
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:43:00) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
if (p > pag):
	msg = "Falta "+ pag-p
else :
	msg = "Troco de "+ pag-p
print(float(msg)

-- ERROR:
File "XXXX", line 8
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:43:07) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
if (p > pag):
	msg = "Falta "+ pag-p
else :
	msg = "Troco de "+ pag-p
print(float(msg))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    msg = "Falta "+ pag-p
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:44:15) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
if (p > pag):
	msg = "Falta "+ p - pag
else :
	msg = "Troco de "+ pag - p
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    msg = "Falta "+ p - pag
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:44:34) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
if (p > pag):
	msg = "Falta "+ (p - pag)
else :
	msg = "Troco de "+ (pag - p)
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    msg = "Falta "+ (p - pag)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:45:56) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
if (p > pag):
	msg = "Falta "+ (p - pag)
else :
	msg = "Troco de "+ (pag - p)
print(round(msg,2))

-- EXECUTION TIME:
0.131183
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1651/2447/main.py", line 4, in <module>
    msg = "Falta "+ (p - pag)
TypeError: Can't convert 'float' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:45:58) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
if (p > pag):
	msg = "Falta "+ (p - pag)
else :
	msg = "Troco de "+ (pag - p)
print(round(msg,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    msg = "Falta "+ (p - pag)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:46:08) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
if (p > pag):
	msg = "Falta "+p - pag
else :
	msg = "Troco de "+ (pag - p)
print(round(msg,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    msg = "Falta "+p - pag
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:52:40) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
if (p > pag):
	msg = " Falta "+ (p - pag)
else :
	msg = " Troco de "+ (pag - p)
print(round(msg,2))

-- EXECUTION TIME:
0.152873
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1651/2447/main.py", line 4, in <module>
    msg = " Falta "+ (p - pag)
TypeError: Can't convert 'float' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:52:41) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
if (p > pag):
	msg = " Falta "+ (p - pag)
else :
	msg = " Troco de "+ (pag - p)
print(round(msg,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    msg = " Falta "+ (p - pag)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:00:15) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
if (p > pag):
	msg = " Falta "+ (p - pag)
else :
	msg = "Troco de "+ (pag - p)
print(round(msg,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    msg = " Falta "+ (p - pag)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:03:16) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
if (p > pag):
	msg = " Falta "+ (p - pag)
else :
	msg = "Troco de "+ (pag - p)
print(round(msg,2))

-- EXECUTION TIME:
0.1249
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1651/2447/main.py", line 4, in <module>
    msg = " Falta "+ (p - pag)
TypeError: Can't convert 'float' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:03:18) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
if (p > pag):
	msg = " Falta "+ (p - pag)
else :
	msg = "Troco de "+ (pag - p)
print(round(msg,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    msg = " Falta "+ (p - pag)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:04:21) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
x = p-pag
y = pag-p
if (p > pag):
	msg = " Falta "+ y
else :
	msg = "Troco de "+ y
print(round(msg,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    msg = " Falta "+ y
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:07:25) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
x = (p-pag)
y = (pag-p)
if (p > pag):
	msg = " Falta "+ y
else :
	msg = "Troco de "+ x
print(round(msg,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    msg = " Falta "+ y
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:09:23) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
x = (p-pag)
y = (pag-p)
if (p > pag):
	msg = " Falta "+ x
else :
	msg = "Troco de "+ y
print(round(msg,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    msg = " Falta "+ x
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:09:39) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
x = (p-pag)
y = (pag-p)
if (p > pag):
	msg = " Falta "+ x
else :
	msg = y
print(round(msg,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    msg = " Falta "+ x
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:10:20) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
x = (p-pag)
y = (pag-p)
if (p > pag):
	msg = " Falta "+ x
else :
	msg = "Troco de "+y
print(round(msg,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    msg = " Falta "+ x
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:15:50) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
x = (p-pag)
y = (pag-p)
if (p > pag):
	print("Falta "round(x,2)
else :
	print("Troco de "round(y,2)


-- ERROR:
File "XXXX", line 6
    print("Falta "round(x,2)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:16:52) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
x = (p-pag)
y = (pag-p)
if (p > pag):
	print("Falta ",round(x,2))
else :
	print("Troco de ",round(y,2))

-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:17:11) 
-- CODE:
p = float(input("preco: "))
pag = float(input("pagamento: "))
x = (p-pag)
y = (pag-p)
if (p > pag):
	print("Falta ",round(x,2))
else :
	print("Troco de ",round(y,2))

-- EXECUTION TIME:
0.168744
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
